@@ -2,9 +2,14 @@
 	* libavogadro/src/engines/ribbonengine.*: Updated so that we now have
 	multiple chain colours!
 
-	* libavogadro/src/engines/ringengine.*
+	* libavogadro/src/engines/ringengine.*,
 	libavogadro/src/engines/CMakeLists.txt: Added new ring engine, renders
 	ring structures. Transparency is not working yet.
+
+	* libavogadro/src/engines/ringengine.*,
+	libavogadro/src/engines/CMakeLists.txt,
+	libavogadro/src/engines/ringsettingswidget.ui: Added opacity slider,
+	transparency now working.
 
 2007-11-11  Marcus D. Hanwell <marcus@cryos.org>
 	* libavogadro/src/painterdevice.h, libavogadro/src/povpainter.h,
